force-app/main/default/objects/Meeting__c/fields/Descritpion__c.field-meta.xml
<CustomField>
    <fullName>Descritpion__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>