force-app/main/default/objects/Meeting__c/fields/heroku_connect_id__c.field-meta.xml
<CustomField>
    <fullName>heroku_connect_id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External System id</inlineHelpText>
    <label>heroku connect id</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>