force-app/main/default/objects/Meeting__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Host</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>