force-app/main/default/objects/Meeting__c/fields/Meeting_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Attendees__c</fullName>
    <description>Meeting Attendees Count</description>
    <inlineHelpText>Meeting Attendees Count</inlineHelpText>
    <label>Meeting Attendees</label>
    <summaryForeignKey>Meeting_Attendees__c.Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>