force-app/main/default/objects/Meeting__c/fields/Meeting_Detail__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Detail__c</fullName>
    <label>Meeting Detail</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>