force-app/main/default/objects/Meeting__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Project__c.Project_Type__c</field>
            <operation>notContain</operation>
            <value>Foundation</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>