force-app/main/default/objects/Meeting__c/fields/Register_URL__c.field-meta.xml
<CustomField>
    <fullName>Register_URL__c</fullName>
    <label>Register URL</label>
    <type>Url</type>
</CustomField>