force-app/main/default/objects/Meeting__c/fields/Where__c.field-meta.xml
<CustomField>
    <fullName>Where__c</fullName>
    <label>Where</label>
    <type>TextArea</type>
</CustomField>