force-app/main/default/objects/Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>TimeZone__c</columns>
    <columns>Subject__c</columns>
    <columns>Campaign__c</columns>
    <columns>StartDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Meeting,Webinar</value>
    </filters>
    <label>All</label>
</ListView>