force-app/main/default/objects/Meeting__c/listViews/Meetings_Full_List.listView-meta.xml
<ListView>
    <fullName>Meetings_Full_List</fullName>
    <columns>Project__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Project__c</field>
        <operation>equals</operation>
        <value>LF AI Foundation</value>
    </filters>
    <label>Meetings - Full List</label>
</ListView>