force-app/main/default/objects/Meeting__c/listViews/Webinars.listView-meta.xml
<ListView>
    <fullName>Webinars</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>TimeZone__c</columns>
    <columns>Subject__c</columns>
    <columns>Campaign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Webinar</value>
    </filters>
    <label>Webinars</label>
</ListView>